--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/services.css">
+    <link rel="stylesheet" href="styles/services.css" loading="lazy">
 </head>
 <body>
     <header>
@@ -190,4 +190,5 @@
 
     <script src="js/index.js"></script>
 </body>
+
 </html>
